@@ -28,14 +28,18 @@
   Specify the credentials for the admin user if you use DevEndpoint and authentication is set to UserPassword
  .Parameter language
   Specify language version that is used for installing the app. The value must be a valid culture name for a language in Business Central, such as en-US or da-DK. If the specified language does not exist on the Business Central Server instance, then en-US is used.
+ .Parameter replaceDependencies
+  With this parameter, you can specify a hashtable, describring that the specified dependencies in the apps being published should be replaced
  .Example
   Publish-NavContainerApp -appFile c:\temp\myapp.app
  .Example
   Publish-NavContainerApp -containerName test2 -appFile c:\temp\myapp.app -skipVerification
  .Example
-  Publish-NavContainerApp -containerName test2 -appFile c:\temp\myapp.app -install
+  Publish-NavContainerApp -containerName test2 -appFile c:\temp\myapp.app -install -sync
  .Example
-  Publish-NavContainerApp -containerName test2 -appFile c:\temp\myapp.app -skipVerification -install -tenant mytenant
+  Publish-NavContainerApp -containerName test2 -appFile c:\temp\myapp.app -skipVerification -install -sync -tenant mytenant
+ .Example
+  Publish-NavContainerApp -containerName test2 -appFile c:\temp\myapp.app -install -sync -replaceDependencies @{ "437dbf0e-84ff-417a-965d-ed2bb9650972" = @{ "id" = "88b7902e-1655-4e7b-812e-ee9f0667b01b"; "name" = "MyBaseApp"; "publisher" = "Freddy Kristiansen"; "minversion" = "1.0.0.0" }}
 #>
 function Publish-NavContainerApp {
     Param (
@@ -57,7 +61,8 @@ function Publish-NavContainerApp {
         [string] $scope,
         [switch] $useDevEndpoint,
         [pscredential] $credential,
-        [string] $language = ""
+        [string] $language = "",
+        [hashtable] $replaceDependencies = $null
     )
 
     Add-Type -AssemblyName System.Net.Http
@@ -176,8 +181,139 @@ function Publish-NavContainerApp {
     }
     else {
 
-        Invoke-ScriptInNavContainer -containerName $containerName -ScriptBlock { Param($appFile, $skipVerification, $sync, $install, $tenant, $syncMode, $packageType, $scope, $language)
-    
+        Invoke-ScriptInNavContainer -containerName $containerName -ScriptBlock { Param($appFile, $skipVerification, $sync, $install, $tenant, $syncMode, $packageType, $scope, $language, $replaceDependencies)
+
+            Function ReplaceDependenciesInApp {
+                Param (
+                    [string] $appFile,
+                    $replaceDependencies
+                )
+            
+                $zipArchive = $null
+                $memoryStream = $null
+                $fs = $null
+                $binaryReader = $null
+                $binaryWriter = $null
+                $tempDir = (Join-Path ([System.IO.Path]::GetTempPath()) ([Guid]::NewGuid().ToString())) + "\"
+                New-Item $tempDir -ItemType Directory | Out-Null
+
+                try {
+
+                    $fs = [System.IO.File]::OpenRead($appFile)
+                    $binaryReader = [System.IO.BinaryReader]::new($fs)
+                    $magicNumber1 = $binaryReader.ReadUInt32()
+                    $metadataSize = $binaryReader.ReadUInt32()
+                    $metadataVersion = $binaryReader.ReadUInt32()
+                    $packageId = [Guid]::new($binaryReader.ReadBytes(16))
+                    $contentLength = $binaryReader.ReadInt64()
+                    $magicNumber2 = $binaryReader.ReadUInt32()
+                    
+                    if ($magicNumber1 -ne 0x5856414E -or 
+                        $magicNumber2 -ne 0x5856414E -or 
+                        $metadataVersion -gt 2 -or
+                        $fs.Position + $contentLength -gt $fs.Length)
+                    {
+                        throw "Unsupported package format"
+                    }
+                
+                    Add-Type -Assembly System.IO.Compression
+                    Add-Type -Assembly System.IO.Compression.FileSystem
+                    $content = $binaryReader.ReadBytes($contentLength)
+                    $memoryStream = [System.IO.MemoryStream]::new($content)
+                    $zipArchive = [System.IO.Compression.ZipArchive]::new($memoryStream, [System.IO.Compression.ZipArchiveMode]::Read)
+                    $prevdir = ""
+                    $zipArchive.Entries | ForEach-Object {
+                        $fullname = Join-Path $tempDir $_.FullName
+                        $dir = [System.IO.Path]::GetDirectoryName($fullname)
+                        if ($dir -ne $prevdir) {
+                            if (-not (Test-Path $dir -PathType Container)) {
+                                New-Item -Path $dir -ItemType Directory | Out-Null
+                            }
+                        }
+                        $prevdir = $dir
+                        [System.IO.Compression.ZipFileExtensions]::ExtractToFile($_, $fullname)
+                    }
+                    $zipArchive.Dispose()
+                    $zipArchive = $null
+                    $binaryReader.Close()
+                    $binaryReader = $null
+                    $fs.Close()
+                    $fs = $null
+
+                    $changes = $false
+                    $manifestFile = Join-Path $tempDir "NavxManifest.xml"
+                    $manifest = [xml](Get-Content $manifestFile)
+                    $manifest.Package.Dependencies.GetEnumerator() | % {
+                        $dependency = $_
+                        if ($replaceDependencies.ContainsKey($dependency.id)) {
+                            $newDependency = $replaceDependencies[$dependency.id]
+                            Write-Host "Replacing dependency from $($dependency.id) to $($newDependency.id)"
+                            $dependency.id = $newDependency.id
+                            $dependency.name = $newDependency.name
+                            $dependency.publisher = $newDependency.publisher
+                            $dependency.minVersion = $newDependency.minVersion
+                            $changes = $true
+                        }
+                    }
+                    if ($changes) {
+            
+                        $manifest.Save($manifestFile)
+                        
+                        $memoryStream = [System.IO.MemoryStream]::new()
+                        $zipArchive = [System.IO.Compression.ZipArchive]::new($memoryStream, [System.IO.Compression.ZipArchiveMode]::Create, $true)
+                        $files = [System.IO.Directory]::EnumerateFiles($tempDir, "*.*", [System.IO.SearchOption]::AllDirectories)
+                        $files | % {
+                            $file = $_.SubString($tempDir.Length)
+                            [System.IO.Compression.ZipFileExtensions]::CreateEntryFromFile($zipArchive, $_, $file) | Out-Null
+                        }
+                        $zipArchive.Dispose()
+                        $zipArchive = $null
+                        
+                        $appFileName = [System.IO.Path]::GetTempFileName()
+                        $fs = [System.IO.FileStream]::new($appFileName, [System.IO.FileMode]::Create)
+                    
+                        $binaryWriter = [System.IO.BinaryWriter]::new($fs)
+                        $binaryWriter.Write([UInt32](0x5856414E))
+                        $binaryWriter.Write([UInt32](40))
+                        $binaryWriter.Write([UInt32](2))
+                        $binaryWriter.Write($packageId.ToByteArray())
+                        $binaryWriter.Write([UInt64]($memoryStream.Length))
+                        $binaryWriter.Write([UInt32](0x5856414E))
+                        
+                        $memoryStream.Seek(0, [System.IO.SeekOrigin]::Begin) | Out-Null
+                        $memoryStream.CopyTo($fs)
+                        
+                        return $appFileName
+                    }
+                    else {
+                        return $appFile
+                    }
+                }
+                catch {
+                    return $appFile
+                }
+                finally {
+                    if ($zipArchive) {
+                        $zipArchive.Dispose()
+                    }
+                    if ($memoryStream) {
+                        $memoryStream.Close()
+                        $memoryStream.Dispose()
+                    }
+                    if ($binaryWriter) {
+                        $binaryWriter.Close()
+                    }
+                    if ($binaryReader) {
+                        $binaryReader.Close()
+                    }
+                    if ($fs) {
+                        $fs.Close()
+                    }
+                    if (Test-Path $tempDir) {
+                        Remove-Item -Path $tempDir -Recurse -Force
+                    }
+                }
+            }
     
             $publishArgs = @{ "packageType" = $packageType }
             if ($scope) {
@@ -187,14 +323,22 @@ function Publish-NavContainerApp {
                 }
             }
     
+            $orgAppFile = $appFile
+            if ($replaceDependencies) {
+                Write-Host "Checking dependencies in $appFile"
+                $appFile = ReplaceDependenciesInApp -appFile $appFile -replaceDependencies $replaceDependencies
+            }
+
             Write-Host "Publishing $appFile"
             Publish-NavApp -ServerInstance $ServerInstance -Path $appFile -SkipVerification:$SkipVerification @publishArgs
 
             if ($sync -or $install) {
+
                 $navAppInfo = Get-NAVAppInfo -Path $appFile
+                $appPublisher = $navAppInfo.Publisher
                 $appName = $navAppInfo.Name
                 $appVersion = $navAppInfo.Version
-        
+
                 $syncArgs = @{}
                 if ($syncMode) {
                     $syncArgs += @{ "Mode" = $syncMode }
@@ -203,7 +347,7 @@ function Publish-NavContainerApp {
                 if ($sync) {
                     Write-Host "Synchronizing $appName on tenant $tenant"
                     Sync-NavTenant -ServerInstance $ServerInstance -Tenant $tenant -Force
-                    Sync-NavApp -ServerInstance $ServerInstance -Name $appName -Version $appVersion -Tenant $tenant @syncArgs -force -WarningAction Ignore
+                    Sync-NavApp -ServerInstance $ServerInstance -Publisher $appPublisher -Name $appName -Version $appVersion -Tenant $tenant @syncArgs -force -WarningAction Ignore
                 }
         
                 if ($install) {
@@ -213,10 +357,15 @@ function Publish-NavContainerApp {
                         $languageArgs += @{ "Language" = $language }
                     }
                     Write-Host "Installing $appName on tenant $tenant"
-                    Install-NavApp -ServerInstance $ServerInstance -Name $appName -Version $appVersion -Tenant $tenant @languageArgs
+                    Install-NavApp -ServerInstance $ServerInstance -Publisher $appPublisher -Name $appName -Version $appVersion -Tenant $tenant @languageArgs
                 }
             }
-        } -ArgumentList $containerAppFile, $skipVerification, $sync, $install, $tenant, $syncMode, $packageType, $scope, $language
+
+            if ($appFile -ne $orgAppFile) {
+                Remove-Item $appFile -Force -ErrorAction SilentlyContinue
+            }
+
+        } -ArgumentList $containerAppFile, $skipVerification, $sync, $install, $tenant, $syncMode, $packageType, $scope, $language, $replaceDependencies
     }
 
     if ($copied) { 
